[project]
name = "cargo"
version = "0.1.0"
description = "항공 화물 데이터 분석 대시보드 - Cargo Transfer Analysis Dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.3.2",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "streamlit>=1.49.1",
]
